--- a/common/pom.xml
+++ b/common/pom.xml
@@ -108,7 +108,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
+      <artifactId>${hadoop-client-api.artifact}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>${hadoop-client-runtime.artifact}</artifactId>
     </dependency>
     <dependency>
       <groupId>org.roaringbitmap</groupId>
