--- a/conf/log4j2.xml.template
+++ b/conf/log4j2.xml.template
@@ -32,7 +32,7 @@
               -->
             <PatternLayout pattern="%d{yy/MM/dd HH:mm:ss,SSS} %p [%t] %c{1}: %m%n%ex"/>
         </Console>
-        <RollingRandomAccessFile name="rollingBySize" fileName="${env:CELEBORN_LOG_DIR}/celeborn.log" filePattern="${env:CELEBORN_LOG_DIR}/celeborn.log.%d" ignoreExceptions="false" append="true">
+        <RollingRandomAccessFile name="file" fileName="${env:CELEBORN_LOG_DIR}/celeborn.log" filePattern="${env:CELEBORN_LOG_DIR}/celeborn.log.%d" ignoreExceptions="false" append="true">
             <PatternLayout pattern="%d{yy/MM/dd HH:mm:ss,SSS} %p [%t] %c{1}: %m%n%ex"/>
             <Policies>
                 <SizeBasedTriggeringPolicy size="200 MB"/>
@@ -47,11 +47,11 @@
               ~ Here are appender templates, keep the appender as your need.
               -->
             <AppenderRef ref="stdout"/>
-            <AppenderRef ref="rollingBySize"/>
+            <AppenderRef ref="file"/>
         </Root>
         <Logger name="org.apache.hadoop.hdfs" level="WARN" additivity="false">
             <Appender-ref ref="stdout" level="WARN" />
-            <Appender-ref ref="rollingBySize" level="WARN"/>
+            <Appender-ref ref="file" level="WARN"/>
         </Logger>
     </Loggers>
 </Configuration>
