--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,8 @@
       --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
       --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
       --add-opens=java.base/sun.security.action=ALL-UNNAMED
-      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</extraJavaTestArgs>
+      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+      --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</extraJavaTestArgs>
 
     <mavenCentralId>central</mavenCentralId>
     <mavenCentralName>Maven Central</mavenCentralName>
