[CELEBORN-518] fix bug that worer uses celeborn.master.metrics.prometheus.port in worker-statefulse

--- a/charts/celeborn/templates/worker-statefulset.yaml
+++ b/charts/celeborn/templates/worker-statefulset.yaml
@@ -85,7 +85,7 @@ spec:
         resources:
           {{- toYaml .Values.resources.worker | nindent 12 }}
         ports:
-          - containerPort: {{ get .Values.celeborn "celeborn.master.metrics.prometheus.port" | default 9096 }}
+          - containerPort: {{ get .Values.celeborn "celeborn.worker.metrics.prometheus.port" | default 9096 }}
             name: metrics
             protocol: TCP
         volumeMounts:
