--- a/tests/flink-it/pom.xml
+++ b/tests/flink-it/pom.xml
@@ -74,11 +74,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.celeborn</groupId>
-      <artifactId>celeborn-client-flink-1.14_${scala.binary.version}</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
@@ -91,29 +86,33 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.celeborn</groupId>
+      <artifactId>${celeborn.flink.plugin.artifact}</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
+      <artifactId>${flink.streamig.artifact}</artifactId>
       <version>${flink.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-clients_${scala.binary.version}</artifactId>
+      <artifactId>${flink.clients.artifact}</artifactId>
       <version>${flink.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-scala_${scala.binary.version}</artifactId>
+      <artifactId>${flink.scala.artifact}</artifactId>
       <version>${flink.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-runtime-web_${scala.binary.version}</artifactId>
+      <artifactId>${flink.runtime.web.artifact}</artifactId>
       <version>${flink.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
-
 </project>
