--- a/master/pom.xml
+++ b/master/pom.xml
@@ -94,6 +94,12 @@
       <version>3.6.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>3.3.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
