--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
   </distributionManagement>
 
   <properties>
-    <project.version>0.4.2-SNAPSHOT</project.version>
+    <project.version>0.4.2</project.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
